@@ -1,8 +1,12 @@
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InterruptedIOException;
+import java.io.ObjectOutputStream;
+import java.io.OutputStream;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.HashMap;
@@ -15,9 +19,11 @@ import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hbase.HBaseConfiguration;
 import org.apache.hadoop.hbase.MasterNotRunningException;
 import org.apache.hadoop.hbase.ZooKeeperConnectionException;
+import org.apache.hadoop.hbase.client.Get;
 import org.apache.hadoop.hbase.client.HBaseAdmin;
 import org.apache.hadoop.hbase.client.HTable;
 import org.apache.hadoop.hbase.client.Put;
+import org.apache.hadoop.hbase.client.Result;
 import org.apache.hadoop.hbase.client.RetriesExhaustedWithDetailsException;
 import org.apache.hadoop.hbase.util.Bytes;
 import org.apache.hadoop.io.NullWritable;
@@ -30,9 +36,10 @@ import org.apache.log4j.Logger;
 public class BackSearchRateReducer extends Reducer<Text, NullWritable, NullWritable, NullWritable> {
 	
 	private String lastQuery = "";
-	private LinkedList<String> _baiduIdList = new LinkedList<String>();
+	private ArrayList<String> _baiduIdList = new ArrayList<String>();
 	private HTable _query_stat_table;
-	private String _date_colume_name;
+	private String _today_date;
+	private String _pre_date;
 	
 	protected void setup(Context context) throws IOException, InterruptedException {
 		Configuration configuration = new Configuration();
@@ -55,19 +62,42 @@ public class BackSearchRateReducer extends Reducer<Text, NullWritable, NullWrita
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
-        
-        _date_colume_name = context.ge
+
+        System.err.println("QUERY_STAT: " + _query_stat_table);
+        _today_date = context.getConfiguration().get("CURRENT_DATE");
+        /*
+        Calendar calendar = Calendar.getInstance();
+        DateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+        try {
+        	calendar.setTime(sdf.parse(_today_date));
+		} catch (ParseException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+
+        calendar.add(Calendar.DAY_OF_MONTH, -1);
+        _pre_date = sdf.format(calendar.getTime());
+        */
 	}
 	
-	private void writeToHBase()
+	private void writeToHBase() throws IOException
 	{
 		if (!lastQuery.isEmpty() && !_baiduIdList.isEmpty())
 		{
-			Put p = new Put(Bytes.toBytes(String.valueOf(lastQuery)));
-			
-			p.add(Bytes.toBytes("cookies"), Bytes.toBytes(_date_colume_name), Bytes.toBytes(sentence));
+			Put putToday = new Put(Bytes.toBytes(String.valueOf(lastQuery + "_" + _today_date)));
+			ByteArrayOutputStream out = new ByteArrayOutputStream();
 			try {
-				_query_stat_table.put(p);
+				new ObjectOutputStream(out).writeObject(_baiduIdList);
+			} catch (IOException e1) {
+				// TODO Auto-generated catch block
+				e1.printStackTrace();
+				return;
+			}
+			
+			putToday.add(Bytes.toBytes("data"), Bytes.toBytes("baiduIdListToday"), out.toByteArray());
+
+			try {
+				_query_stat_table.put(putToday);
 			} catch (RetriesExhaustedWithDetailsException e) {
 				// TODO Auto-generated catch block
 				e.printStackTrace();
@@ -78,7 +108,7 @@ public class BackSearchRateReducer extends Reducer<Text, NullWritable, NullWrita
 		}
 	}
 
-	public void reduce(Text key, Iterable<Text> values, Context context)
+	public void reduce(Text key, Iterable<NullWritable> values, Context context)
 			throws IOException, InterruptedException {
 
 		String[] key_inputs = key.toString().split("\t");
@@ -97,13 +127,13 @@ public class BackSearchRateReducer extends Reducer<Text, NullWritable, NullWrita
 
 			lastQuery = query;
 			_baiduIdList.clear();
-			_baiduIdList.offer(baiduId);
+			_baiduIdList.add(baiduId);
 		}
 		else
 		{
-			if (_baiduIdList.isEmpty() || _baiduIdList.getLast() != baiduId)
+			if (_baiduIdList.isEmpty() || _baiduIdList.get(_baiduIdList.size() - 1) != baiduId)
 			{
-				_baiduIdList.offer(baiduId);
+				_baiduIdList.add(baiduId);
 			}
 		}
 
